[package]
name = "tb64"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
cli-clipboard = "0.4.0"
terminal_size = "0.4.4"

[profile.release]
strip = true
lto = "fat"
panic = "abort"

[dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_System_Console",
]
